update render pipeline